src/_includes/css/style.css
/* ... */
.main-container .main-content .about-banner {
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-container .main-content .writing-about {
    padding-bottom: 2rem;
}

.main-container .main-content .about-banner .about-headshot {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 1rem;
    margin-right: 1rem;
    margin-bottom: 3rem;
    border-radius: 50%;
    max-width: 100%;
    transform-origin: 60% 50%;
    height: 200px;
    width: 200px;
}

.main-container .main-content p {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
    font-family: var(--system-font);
    line-height: 1.5;
}

.main-container .projects .projects-wrapper {
    max-width: 1000px;
    display: flex;
    flex-direction: column;
    margin-top: 1rem;
    margin-bottom: 1rem;
    padding-left: 1.1rem;
    padding-right: 1.1rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    margin-left: auto;
    margin-right: auto;
}

.main-container .projects .project-grid {
    display: grid;
    padding-left: 0;
    grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
    gap: 2rem;
    overflow: hidden;
    list-style: none;
    /* padding: .2rem; */
}

.main-container .projects .project-grid .project-tile {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    background: #fff;
    border: 1px solid lightgray;
    overflow: hidden;
    max-width: 100%;
    width: 100%;
    /* height: 100%; */
    margin-bottom: 2rem;
    border-radius: .3rem;
    transform-origin: 50% 50%;
    box-shadow: 0px 5px 11px -8px rgba(0,0,0,0.75);
    /* transition: box-shadow 200ms ease-out; */
}

.main-container .projects .project-tile picture {
    height: 100%;
    width: 100%;
}

.main-container .projects .project-tile img {
    /* height: 45vh; */
    height: 300px;
    width: 100%;
    max-width: 100%;
    transform-origin: center;
    overflow: hidden;
}

.main-container .projects .project-tile .project-details {
    padding: 1rem;
    margin: 0 auto;
}

.main-container .projects .project-tile .project-details .links {
    margin-top: 2rem;
    margin-bottom: 1rem;
    list-style: none;
    padding-left: 0;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.main-container .projects .project-tile .project-details .links .tile-link {
    padding: .5rem;
    border-radius: .1rem;
    text-decoration: none;
    color: #212421;
    color: #444;
    font-size: 14px;
    margin-right: .75rem;
    box-shadow: none;
    transition: border 300ms ease-out, background 300ms ease-in-out, color 200ms ease-in;
    border: 1.5px solid lightgray;
}

.main-container .projects .project-tile .project-details .links .tile-link:hover,
.main-container .projects .project-tile .project-details .links .tile-link:focus  {
    cursor: pointer;
    color: #212421;
    border: 1.5px solid hsl(0, 0%, 20%);
}

.main-container .projects .project-tile .project-details h3 {
    margin-top: 0rem;
    margin-bottom: 0;
}

.main-container .projects .project-tile .project-details h3 a {
    color: #333;
    text-decoration: none;
}

.main-container .projects .project-tile .project-details h3 a:hover {
    text-decoration: underline;
}

.main-container .projects .project-tile .project-details .project-link {
    display: block;
    position: relative;
    margin-top: .5rem;
    margin-bottom: .5rem;
}

.main-container .projects .project-tile .project-link a {
    padding-left: 1.5rem;
}

.reach-me.button {
    text-decoration: none;
    color: #000;
    background: #fff;
    margin-top: .75rem;
    font-weight: 400;
    border: 2px solid #272643;
    padding: .75rem 1.75rem;
    font-size: .9rem;
    transition: box-shadow .1s ease-in-out, background .2s ease-in-out, color .2s ease-in;
    box-shadow: 4px 4px 0px 0px black;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}
    
.reach-me.button:hover {
    box-shadow: 0px -1px 0px -1px rgba(0, 0, 0, 0.75);
    border: 2px solid #000;
    background: #212421;
    color: #FFF;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}

.see-more:hover {
    text-decoration: none !important;
}

.rp-container {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2rem;
    margin-top: 1rem;
    padding: 1rem 1.1rem;
    max-width: 950px;
    max-width: 1000px;
    font-family: var(--system-font);
}

.recent-posts article {
    padding-top: .5rem;
    padding-bottom: .5rem;
}

.recent-posts h2 {
    margin-bottom: .25rem;
}

.recent-posts .post h2 a,
.recent-posts .post h3 a {
    text-decoration: none;
}

.recent-posts .post h2 a:hover,
.recent-posts .post h3 a:hover {
    text-decoration: underline;
}

.recent-posts .read-more .see-more-btn:hover {
    cursor: pointer;
    text-decoration: underline;

}

.slide-right {
    transform: translateX(5px);
}

.featured-art .feat-art-wrapper {
    padding: .5rem 0;
    margin: 0 auto;
    padding: 2rem 0;
    padding-left: 1.1rem;
    padding-right: 1.1rem;
    padding-bottom: 3rem;
    max-width: 1000px;
}

.featured-art .feat-art-list {
    display: flex;
    justify-content: center;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
}

.featured-art .feat-art-list li {
    padding-right: .5rem;
}

.featured-art .feat-art-list li a {
    padding: 1rem 0 0 0;
}

.featured-art .feat-art-list li a img {
    border: 1px solid lightgray;
    /* object-fit: fill; */
    object-fit: cover;
    width: 640px;
    height: 300px;
    max-width: 100%;
}

.contact {
    background: #202d3d;
    background: inherit;
}

.contact-wrapper {
    max-width: 1000px;
    padding: 1rem 1.1rem;
    margin: 2rem auto;
}

.contact-wrapper .socials-list {
    margin-top: 2.5rem;
    list-style: none;
    padding-left: 0;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}
/* ... */

